; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_md5proto.c_md5_open.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_md5proto.c_md5_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.MD5Context* }
%struct.MD5Context = type { i32 }

@AVIO_FLAG_WRITE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i32)* @md5_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @md5_open(%struct.TYPE_3__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.MD5Context*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.MD5Context*, %struct.MD5Context** %10, align 8
  store %struct.MD5Context* %11, %struct.MD5Context** %8, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @AVIO_FLAG_WRITE, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* @EINVAL, align 4
  %18 = call i32 @AVERROR(i32 %17)
  store i32 %18, i32* %4, align 4
  br label %35

19:                                               ; preds = %3
  %20 = call i32 (...) @av_md5_alloc()
  %21 = load %struct.MD5Context*, %struct.MD5Context** %8, align 8
  %22 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load %struct.MD5Context*, %struct.MD5Context** %8, align 8
  %24 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %19
  %28 = load i32, i32* @ENOMEM, align 4
  %29 = call i32 @AVERROR(i32 %28)
  store i32 %29, i32* %4, align 4
  br label %35

30:                                               ; preds = %19
  %31 = load %struct.MD5Context*, %struct.MD5Context** %8, align 8
  %32 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @av_md5_init(i32 %33)
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %30, %27, %16
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @av_md5_alloc(...) #1

declare dso_local i32 @av_md5_init(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
